[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Dialog/show_char_name_dialog.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="InputEventKey" id=2]
scancode = 16777221

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="show_char_name_dialog" type="Panel"]
margin_left = 36.0
margin_top = 94.0
margin_right = 335.0
margin_bottom = 246.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 283.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center][color=red]SHOW A BOX WITH CHARACTER NAME[/color][/center]"
text = "SHOW A BOX WITH CHARACTER NAME"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 283.0
margin_bottom = 38.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Name:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 283.0
margin_bottom = 62.0
mouse_default_cursor_shape = 2
text = "Select the name from the character list"
items = [ "Select the name from the character list", null, false, 0, null, "Select the name from the variable list", null, false, 1, null, "Type the text manually", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 283.0
margin_bottom = 86.0
mouse_default_cursor_shape = 2

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 403.0
margin_bottom = 86.0
mouse_default_cursor_shape = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 403.0
margin_bottom = 90.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 403.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "write a name..."
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 283.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 50.0
margin_bottom = 17.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Type:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 283.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Left Box Name"
items = [ "Left Box Name", null, false, 0, null, "Right Box Name", null, false, 1, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 283.0
margin_bottom = 134.0
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 194.0
margin_right = 225.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
shortcut = SubResource( 3 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 229.0
margin_right = 283.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Cancel"
[connection signal="visibility_changed" from="." to="." method="_on_show_char_name_dialog_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_type_OptionButton_item_selected"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
